--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -1,29 +1,54 @@
-FROM node:22-alpine
+FROM node:20-buster-slim as builder
 
 WORKDIR /app/medusa
 
-RUN apk update && apk add bash
+COPY . .
 
-RUN apk add --no-cache python3
+RUN rm -rf node_modules
+
+# RUN apk update && apk add bash convert to debian 
+RUN apt-get update && apt-get install -y bash
+
+# RUN apk add --no-cache python3 convert to debian
+RUN apt-get install -y python3
 
 RUN npm install -g npm@latest
 
-RUN npm install -g @medusajs/medusa-cli@latest
+
 
 # install babel in global
 RUN npm install -g @babel/core @babel/cli @babel/preset-env
 # install cros env in global
 RUN npm install -g cross-env
 
-COPY . .
-
-RUN chmod +x develop.sh
-
 RUN npm install --loglevel=error
+
+RUN npm run build
+
+FROM node:20-buster-slim
+
+WORKDIR /app/medusa
+
+RUN mkdir dist
+
+COPY package*.json ./ 
+
+COPY develop.sh .
+
+COPY .env .
+
+COPY medusa-config.js .
+
+RUN apt-get update
+
+RUN apt-get install -y python3
+
+RUN npm install -g @medusajs/medusa-cli@latest
 
 RUN npm i --only=production
 
+COPY --from=builder /app/medusa/dist ./dist
 
+RUN chmod +x develop.sh
 
-
-ENTRYPOINT ["sh", "develop.sh"]
+ENTRYPOINT ["./develop.sh", "start"]
